--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Score11/score11-rest#readme",
   "dependencies": {
+    "express": "^4.13.3",
     "mysql": "^2.9.0"
   },
   "devDependencies": {
