--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "score11-rest",
   "version": "0.0.1",
   "description": "The Score11 REST interface",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "jsonschema": "^1.0.2",
+    "mocha": "^2.3.3",
     "supertest": "^1.1.0"
   }
 }
