--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "node_modules/mocha/bin/mocha"
+    "test": "PORT=42424 node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
