--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mysql": "^2.9.0"
   },
   "devDependencies": {
+    "chai": "^3.3.0",
     "jsonschema": "^1.0.2",
     "mocha": "^2.3.3",
+    "simple-mock": "^0.4.1",
     "supertest": "^1.1.0"
   }
 }
